2019-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve wide ==, !=, part of RFE #641.

2019-08-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc,
	  support/regression/test/bug-2929.c:
	  Fix bug #2929.

2019-08-17 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/strdup.c:
	  Fix strdup buffer overflow (patch #306).

2019-08-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve ~ register allocation (RFE #638).

2019-08-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peeph-z80.def,
	  src/z80/peeph-tlcs90.def,
	  src/z80/peeph-r2k.def:
	  Improve caching of zero on pointer write.

2019-08-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve assignment.
	* device/include/string.h,
	  device/lib/strdup.c,
	  device/lib/strndup.c,
	  device/lib/incl.mk:
	  Implement C2X string duplication functions.

2019-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Improve notUsed() precision, alternative to patch from z88dk fork.
	* src/stm8/*.def:
	  Add rule from patch #304.
	* src/z80/gen.c:
	  Improve load of hl.

2019-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c,
	  src/stm8/peeph.def:
	  stm8 peephole optimization improvements, mostly picked from patch #290.
	* sdas/asxxsrc/asmcro.c:
	  Improve sdas behaviour on internal error, patch from bug #2626.
	* src/z80/peep.c:
	  Pick some peephole optimization improvements from z88dk fork.

2019-08-12 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk13/pdk13mch.c:
	  Bit instruction fixes by Free-PDK.
	* device/lib/pdk13/__gptrget.s:
	  Pointer read fix as suggested by Serge Rabyking (see patch #305).

2019-07-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Small improvements in handling of wide values.

2019-07-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve aop moves (in particular wrt. 16-bit ld).
