@@ -81,7 +81,7 @@ void cl_pdk::reset(void) {
   PC = 0x0000;
   regs.a = 0;
   for (size_t i = 0; i < io_size; ++i) {
-    regs.regs[i] = 0;
+    store_io(i, 0);
   }
 }
 
@@ -148,25 +148,27 @@ void cl_pdk::make_memories(void) {
   ram = as = new cl_address_space("ram", 0, ram_storage, 8);
   as->init();
   address_spaces->add(as);
+  regs8 = as = new cl_address_space("regs8", 0, io_size + 1, 8);
+  as->init();
+  address_spaces->add(as);
 
-  class cl_address_decoder *ad;
-  class cl_memory_chip *chip;
+  {
+    class cl_address_decoder *ad;
+    class cl_memory_chip *chip;
 
-  chip = new cl_memory_chip("rom_chip", rom_storage, 16);
-  chip->init();
-  memchips->add(chip);
+    chip = new cl_memory_chip("rom_chip", rom_storage, 16);
+    chip->init();
+    memchips->add(chip);
 
-  ad = new cl_address_decoder(as = address_space("rom"), chip, 0, rom_storage, 0);
-  ad->init();
-  as->decoders->add(ad);
-  ad->activate(0);
-
-  regs8 = new cl_address_space("regs8", 0, io_size + 1, 8);
-  regs8->init();
-  for (size_t i = 0; i < io_size; ++i) {
-    regs8->get_cell(i)->decode((t_mem *)(regs.regs + i));
+    ad = new cl_address_decoder(as = address_space("rom"), chip, 0, rom_storage, 0);
+    ad->init();
+    as->decoders->add(ad);
+    ad->activate(0);
   }
-  address_spaces->add(regs8);
+  {
+    // extra byte of the IO memory will point to the A register just for the debugger
+    regs8->get_cell(io_size)->decode(&(regs._a));
+  }
 
   class cl_var *v;
   vars->add(v = new cl_var(cchars("flag"), regs8, 0, ""));
@@ -382,8 +384,8 @@ char *cl_pdk::disass(t_addr addr, const char *sep) {
 
 void cl_pdk::print_regs(class cl_console_base *con) {
   con->dd_printf("A= 0x%02x(%3d)\n", regs.a, regs.a);
-  con->dd_printf("Flag= 0x%02x(%3d)  \n", regs.regs[0x00], regs.regs[0x00]);
-  con->dd_printf("SP= 0x%02x(%3d)\n", regs.regs[0x02], regs.regs[0x02]);
+  con->dd_printf("Flag= 0x%02x(%3d)  \n", get_flags(), get_flags());
+  con->dd_printf("SP= 0x%02x(%3d)\n", get_SP(), get_SP());
 
   print_disass(PC, con);
 }
